--- a/public/css/style.css
+++ b/public/css/style.css
@@ -243,4 +243,21 @@ background-color: rgb(255,0,0);
 background-image: none;
 }
 
+#cargando {
+	width:100%;
+	height: 100%;
+	position:absolute;
+	background-color: rgba(0,0,0,0.5);
+	left:0px;
+	top:0px;
+	z-index:100000;
 
+}
+
+#imagen-cargando {
+	left:50%;
+	top: 50%;
+	margin-left:-30px;
+	position:absolute;
+	color: white;
+}
